<?xml version="1.0"?>
<package>
  <name>rosabridge_arduino</name>
  <version>0.1.1</version>
  <description>Libraries and examples for usage on Arduino platforms.</description>
  <author>Chad Attermann</author>
  <maintainer email="chad@ecostechnologies.com">Chad Attermann</maintainer>
  <license>BSD</license>
  <url>https://github.com/ecostech/rosabridge.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>rosabridge_msgs</run_depend>
  <run_depend>arduino-core</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_msgs</run_depend>
  <run_depend>rosserial_client</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
