<?xml version="1.0"?>
<package>
  <name>rosabridge_server</name>
  <version>0.1.1</version>
  <description>The rosabridge_server package for expanding abridged messages</description>
  <author>Chad Attermann</author>
  <maintainer email="chad@ecostechnologies.com">Chad Attermann</maintainer>
  <license>BSD</license>
  <url>https://github.com/ecostech/rosabridge.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rosabridge_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>topic_tools</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>rosabridge_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>topic_tools</run_depend>
  <run_depend>tf</run_depend>
</package>
